--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -64,7 +64,7 @@
     }
 
     .nav-button {
-        flex: 1 1 calc(50% - 30px);
+        flex: 1 1 calc(33.33% - 30px);
         margin: 15px;
         height: 25vh;
         margin: var(--spacing-xs) var(--spacing-sm);
@@ -80,7 +80,7 @@
 
     .slide img {
         width: 100%;
-        height: 0px;
+        height: 40vh;
         object-fit: cover;
     }
 
